@@ -40,6 +40,9 @@ Release 0.23.7 - UNRELEASED
     HADOOP-6941. Support non-SUN JREs in UserGroupInformation (Devaraj Das 
     via tgraves)
 
+    HADOOP-8346. Changes to support Kerberos with non Sun JVM (HADOOP-6941) 
+    broke SPNEGO (Devaraj Das via tgraves)
+
 Release 0.23.6 - UNRELEASED
 
   INCOMPATIBLE CHANGES
